# grid-computing-forecasting

./: .dockerfile  .env  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: github-actions.yml
app/backend/: Dockerfile  df_sample.pkl  fastapi_app.py
app/frontend/: Dockerfile  streamlit_app.py
models/: dataset_cls.pth  xgboost.pkl
notebooks/: data-exploration.ipynb
src/grid_computing_forecasting/: config.py  database.py  dataset.py
src/grid_computing_forecasting/modeling/: predict.py  train.py
src/grid_computing_forecasting/modeling/regression/: main_reg_cv.py  train.sh
src/grid_computing_forecasting/modeling/regression/data/: data.py  sparse_data.py  sparseloader.py  untitled.py
src/grid_computing_forecasting/modeling/regression/models/: dynamic_net.py  mlp.py  splinear.py
