[tool.poetry]
name = "grid-computing-forecasting"
version = "0.1.0"
description = ""
authors = ["hao <ahmed.ait.ouazzou@protonmail.com>"]
readme = "README.md"
packages = [{include = "grid_computing_forecasting", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
mysqlclient = {version = "^2.2.5", optional = true}
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
joblib = "^1.4.2"
xgboost = "^2.1.2"
scikit-learn = "^1.5.2"
pyarrow = "^18.0.0"
matplotlib-inline = "^0.1.7"
ipython = "^8.29.0"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
